--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     ]
   },
   "devDependencies": {
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "@testing-library/react-hooks": "^7.0.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
+    "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2"
   }
 }
